configs/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kickstarter-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kickstarter-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kickstarter-app-service  
                port:
                  number: 8000
